samples/_failures_safe/1761629117_f9b7ff_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_eaeec846.c: In function ‘tokenize’:
./samples/SAFE/__tmp_eaeec846.c:177:9: error: expected expression at end of input
  177 |         } else
      |         ^
./samples/SAFE/__tmp_eaeec846.c:177:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_eaeec846.c:177:9: error: expected declaration or statement at end of input
